src/objects/Order.object
<CustomObject>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <description>Customer&apos;s Name</description>
        <inlineHelpText>Enter the name of the customer as to be printed on the invoice</inlineHelpText>
        <label>Customer Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_s_Email__c</fullName>
        <description>Customer&apos;s Email</description>
        <label>Customer&apos;s Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_s_Mobile_Number__c</fullName>
        <label>Customer&apos;s Mobile Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Customer_s_Notes__c</fullName>
        <label>Customer&apos;s Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_of_Order__c</fullName>
        <description>Date of Order</description>
        <inlineHelpText>Date and time when the Order was placed</inlineHelpText>
        <label>Date of Order</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delivery_Address__c</fullName>
        <label>Delivery Address</label>
        <required>true</required>
        <scale>0</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <inlineHelpText>Enter the total discount availed in percentage</inlineHelpText>
        <label>Discount</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Is_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if the list of items has been approved</inlineHelpText>
        <label>Is Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Description__c</fullName>
        <label>Order Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value><fullName>&quot;Cheque</fullName><default>false</default><label>&quot;Cheque</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Track_Order__c</fullName>
        <label>Track Order</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>